# mdax

./: .gitignore  Cargo.toml  README.md  benchmark.sh  dist-workspace.toml
.github/workflows/: build-setup.yml  release.yml
data/: README.md  cadect_test_file.fasta  cadect_test_file.fastq  chris_artefacts.fasta  chris_artefacts_raw.fastq  chris_artefacts_truth.tsv  extract_and_characterise.py  synthesise.py  synthesise_concatemers.py  test_foldback.fasta  test_reads.fa  truth.tsv
irx_tests/: README.md  eval_irx_test_suite.py  irx_calls.tsv  irx_eval.summary.tsv  irx_eval.truth.tsv  irx_manifest.tsv  irx_truth.tsv  make_test_suite.py  test_suite.bash
src/: cfg.rs  cli.rs  concatemer.rs  fingerprint.rs  foldback.rs  io.rs  lib.rs  main.rs  minimizer.rs  pipeline.rs  scratch.rs  utils.rs
test_celegans/: README.md  benchmark.sh  dotplots.sh  probe_identity.py  report.py
test_pal/: README.md  baseline.bp.tsv  baseline.flagged.canon.ids  mdax.report.tsv  mdax_calls.tsv  mdax_only.ids  sweep.sh  sweep_summary.tsv  test_pal.py  test_pal.sh
test_pal/perl/: fastq_partition.and.chop.palindrome.pl
test_pal/sweep_cache/: balanced,hifi [DEFAULT].report.tsv  balanced,hifi,default.report.tsv  balanced,hifi,ident=0.45,support=2.report.tsv  balanced,hifi,ident=0.45,support=3.report.tsv  balanced,hifi,ident=0.45,support=4.calls.tsv  balanced,hifi,ident=0.45,support=4.report.tsv  balanced,hifi,ident=0.45,support=5.report.tsv  balanced,hifi,ident=0.45,support=6.report.tsv  balanced,hifi,min_matches=10.calls.tsv  balanced,hifi,min_matches=10.report.tsv  balanced,hifi,min_matches=12.calls.tsv  balanced,hifi,min_matches=12.report.tsv  balanced,hifi,min_matches=15.calls.tsv  balanced,hifi,min_matches=15.report.tsv  balanced,hifi,min_matches=18.calls.tsv  balanced,hifi,min_matches=18.report.tsv  balanced,hifi,min_matches=20.report.tsv  balanced,hifi,min_matches=25.calls.tsv  balanced,hifi,min_matches=25.report.tsv  balanced,hifi,min_matches=30.calls.tsv  balanced,hifi,min_matches=30.report.tsv  balanced,hifi,min_matches=8.calls.tsv  balanced,hifi,min_matches=8.report.tsv  balanced,ont,ident=0.35,arm=1000.calls.tsv  balanced,ont,ident=0.35,arm=1000.report.tsv  balanced,ont,ident=0.35,arm=400.calls.tsv  balanced,ont,ident=0.35,arm=400.report.tsv  balanced,ont,ident=0.35,arm=600.report.tsv  balanced,ont,ident=0.35.calls.tsv  balanced,ont,ident=0.35.report.tsv  balanced,ont,ident=0.38.calls.tsv  (+123 more)
tests/: README.md  compare_truth.py  pipeline_integration.rs  results_comparison.tsv
(+29 files in other folders)
