[package]
name = "mdax"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
calm_io = "0.1.1"
clap = { version = "4.5.54", features = ["cargo"] }
crossbeam-channel = "0.5.15"
flate2 = "1.1.8"
gxhash = "3.5.0"
needletail = "0.6.3"
packed-seq = "4.4.1"
simd-minimizers = "2.2.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
