[package]
name = "mdax"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/ARU-life-sciences/mdax"
homepage = "https://github.com/ARU-life-sciences/mdax"
description = "Detection and analysis of foldback junctions and MDA concatemers in long-read sequencing data"
authors = ["Max Carter-Brown <max.carter-brown@aru.ac.uk>"]
keywords = ["bioinformatics", "long-reads", "genomics", "mda", "sequencing"]
categories = ["science", "command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
calm_io = "0.1.1"
clap = { version = "4.5.54", features = ["cargo"] }
crossbeam-channel = "0.5.15"
flate2 = "1.1.8"
gxhash = "3.5.0"
needletail = "0.6.3"
packed-seq = "4.4.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simd-minimizers = "2.2.0"
thread_local = "1.1.9"

[target.'cfg(target_arch = "x86_64")'.dependencies]
block-aligner = { version = "0.5.1", features = ["simd_avx2"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
block-aligner = { version = "0.5.1", features = ["simd_neon"] }

[[bin]]
name = "mdax"
path = "src/main.rs"

[[bin]]
name = "irx"
path = "src/bin/irx.rs"

[profile.dist]
inherits = "release"
lto = "thin"
